--- a/text/latex_text/kapitoly/cile.tex
+++ b/text/latex_text/kapitoly/cile.tex
@@ -1,7 +1,7 @@
 
       Cílem diplomové práce je provést rešerši a na jejím základě
       prakticky otestovat proces synchronizace a replikace geodat, které
-      se dnes objevují napříč platformou Esri. V teoretické části práce
+      se dnes objevují napříč platformou \gls{Esri}. V teoretické části práce
       bude detailně analyzován proces synchronizace a replikace ve všech
       možných variantách (jednosměrná, dvousměrná, synchronní,
       asynchronní, ...) a popsány prostředky, které se na platformě Esri k
