--- a/text/latex_text/literatura.bib
+++ b/text/latex_text/literatura.bib
@@ -1,6 +1,193 @@
 % This file was created with JabRef 2.9b2.
 % Encoding: UTF8
 
+@BOOK{Boszormenyi2013,
+  author = {Böszörmenyi, Zoltan and Hans-Jürgen Schönig},
+  title = {PostgreSQL replication: understand basic replication concepts and efficiently replicate PostgreSQL using high-end techniques to protect your data and run your server without interruptions},
+  address = {Birmingham},
+  publisher = {Packt Publishing},
+  year = {c2013},
+  pages = {vii, 230 s.},
+  ISBN = {978-1-84951-672-3}
+}
+@BOOK{BellKindahlThalmann2010, 
+  author = {Bell, Charles and Mats Kindahl and Lars Thalmann}, 
+  title = {MySQL high availability}, 
+  volume = {1.},
+  address = {Sebastopol, CA},
+  publisher = {O'Reilly Media, Inc},
+  year = {2010},
+  ISBN = {978-059-6807-306}
+}
+@BOOK{Connolly2005, 
+  author = {Connolly, Thomas}, 
+  title = {Database Systems: A Practical Approach to Design, Implementation, and Management},
+  volume = {4.},
+  address = {Harlow},
+  publisher = {Addison-Wesley},
+  year = {2005},
+  pages = {1374 s.},
+  ISBN = {03-212-1025-5}
+}
+@BOOK{Esri2006, 
+  author = {Esri}, 
+  title = {ArcGIS 9: Co je ArcGIS 9.2?},
+  address = {United States},
+  publisher = {ESRI Press, US},
+  year = {2006},
+  ISBN = {15-894-8166-6}
+}
+@BOOK{Chacon2009, 
+  author = {Chacon, Scott}, 
+  title = {Pro Git},
+  address = {Praha},
+  publisher = {CZ.NIC},
+  year = {c2009},
+  pages = {263 s},
+  series = {Edice CZ.NIC},
+  ISBN = {978-80-904248-1-4}
+}
+@BOOK{Leiter2009, 
+  author = {Leiter, Chris}, 
+  title = {Beginning Microsoft SQL server 2008 administration},
+  address = {Indianapolis, IN},
+  publisher = {Wiley Pub.},
+  year = {2009},
+  ISBN = {978-047-0440-919}
+}
+@BOOK{Momjian2001, 
+  author = {Momjian, Bruce}, 
+  title = {PostgreSQL: introduction and concepts},
+  address = {Boston, MA},
+  publisher = {Addison-Wesley},
+  year = {2001},
+  pages = {xxviii, 461 p},
+  ISBN = {02-017-0331-9}
+}
+@BOOK{ObeHsu2011, 
+  author = {Obe, Regina and Leo Hsu}, 
+  title = {PostGIS in action},
+  address = {London},
+  publisher = {Pearson Education [distributor]},
+  year = {2011},
+  pages = {492 s},
+  ISBN = {19-351-8226-9}
+}
+@BOOK{ObeHsu2012, 
+  author = {Obe, Regina and Leo Hsu}, 
+  title = {Postgresql: Up and Running},
+  address = {Sebastopol, CA},
+  publisher = {O'Reilly},
+  year = {2012},
+  pages = {164 s},
+  ISBN = {978-144-9326-333}
+}
+@BOOK{Oppel2009, 
+  author = {Oppel, Andrew J.}, 
+  title = {Databases: a beginner's guide},
+  address = {New York},
+  publisher = {McGraw-Hill},
+  year = {2009},
+  pages = {xviii, 478 p},
+  ISBN = {00-716-0846-X}
+}
+@BOOK{RiggsKrossing2010, 
+  author = {Riggs, Simon and Hannu Krosing}, 
+  title = {PostgreSQL 9 administration cookbook: solve real-world PostgreSQL problems with over 100 simple, yet incredibly effective recipes},
+  address = {Birmingham},
+  publisher = {Packt Publishing},
+  year = {2010},
+  pages = {345 s},
+  ISBN = {978-1-849510-28-8}
+}
+@BOOK{Vieira2009, 
+  author = {Vieira, Robert}, 
+  title = {Professional Microsoft SQL server 2008 programming},
+  address = {Indianapolis, IN},
+  publisher = {Wiley Pub.},
+  year = {2009},
+  pages = {893 s},
+  volume = {Wrox professional guides},
+  ISBN = {04-702-5702-4}
+}
+  
+  @BOOK{Whalen2008, 
+    author = {Whalen, Edward a kol}, 
+    title = {Microsoft SQL Server 2005: velký průvodce administrátora},
+    address = {Brno},
+    publisher = {Computer Press},
+    year = {2008},
+    pages = {1080 s},
+    volume = {1.},
+    series = {Edice Administrace (Computer Press)},
+    ISBN = {978-80-251-1949-5}
+  }
+
+@ARTICLE{Cincura2009, 
+  author = {Činčura, Jiří}, 
+  title = {\uppercase{MS SQL 2008} – prostorová data poprvé},
+  journal = {Databázový svět [online]},
+  year = {2009},
+  timestamp = {[cit. 2013-08-12]},
+  url ={http://www.dbsvet.cz/view.php?cisloclanku=2009101201}
+}
+@ARTICLE{Esri2013a, 
+  author = {Esri}, 
+  title = {A quick tour of working with databases in ArcGIS},
+  journal = {ArcGIS Help 10.1 [online]},
+  year = {2013},
+  urldate = {[cit. 2013-08-02]},
+  url = {http://resources.arcgis.com/en/help/main/10.1/index.html#/A_quick_tour_of_working_with_databases_in_ArcGIS/019v00000008000000/}
+}
+@ARTICLE{Esri2013b, 
+  author = {Esri}, 
+  title = {Preparing data for replication},
+  journal = {ArcGIS Help 10.1 [online]},
+  year = {2013},
+  urldat = {[cit. 2013-08-02]},
+  url = {http://resources.arcgis.com/en/help/main/10.1/index.html#/Preparing_data_for_replication/003n000000z5000000/}
+}
+@ARTICLE{Law2008, 
+  author = {Law, Derek}, 
+  title = {Enterprise Geodatabase 101: A review of design and key features for GIS managers and database administrators},
+  journal = {Esri: Understanding our world. [online]},
+  year = {2008},
+  urldate = {2013-06-18},
+  url = {http://www.esri.com/news/arcuser/0408/entergdb_101.html}
+}
+@ARTICLE{Microsoft2013, 
+  author = {Microsoft}, 
+  title = {\uppercase{SQL} Server - Replication},
+  journal = {Microsoft [online]},
+  year = {2013},
+  urldate = {[cit. 2013-08-27]},
+  url = {http://technet.microsoft.com/en-us/library/ms151198(v=sql.100).aspx}
+}
+@ARTICLE{OpenGeo2012, 
+  author = {OpenGeo}, 
+  title = {Introduction to PostGIS [online]},
+  year = {2012b},
+  urldate = {[cit. 2012-08-08]},
+  journal = {Section 17: Geography},
+  url = {http://workshops.opengeo.org/stack-intro/openlayers.html}
+}
+@ARTICLE{OSGEO2013, 
+  author = {OSGeo}, 
+  title = {PostGIS and ArcSDE/ArcGIS Articles},
+  journal = {PostGIS Tracker and Wiki [online]},
+  year = {2013},
+  timestamp = {[cit. 2013-08-08]},
+  url = {http://trac.osgeo.org/postgis/wiki/UsersWikiPostgisarcgis}
+}
+@ARTICLE{PostgreSQL2012, 
+  author = {PostgreSQL}, 
+  title = {FAQ},
+  journal = {PostgreSQL wiki [online]},
+  year = {2012},
+  urldate = {[cit. 2012-08-08]},
+  url = {http://wiki.postgresql.org/wiki/FAQ}
+}
+
 @BOOK{Celikyilmaz2009,
   title = {Modeling uncertainty with fuzzy logic : with recent theory and applications},
   publisher = {Springer},
@@ -33,7 +220,7 @@
   author = {Hengl, T.},
   pages = {291},
   address = {Amsterdam},
-  edition = {2nd},
+  volume = {2.},
   isbn = {978-90-9024981-0},
   organization = {University of Amsterdam},
   owner = {cahik},
@@ -44,6 +231,7 @@
 @BOOK{Talasova2003,
   title = {Fuzzy metody vícekriteriálního hodnocení a rozhodování},
   publisher = {Univerzita Palackého v Olomouci},
+  address = {Amsterdam},
   year = {2003},
   author = {Jana TALAŠOVÁ},
   pages = {180},
@@ -59,6 +247,7 @@
   year = {1975},
   volume = {8},
   pages = {199-249},
+  url = {http://wiki.postgresql.org/wiki/FAQ},
   number = {3},
   owner = {Cahik},
   timestamp = {2012.03.31}
