oprava textů, úprava obrázku, vytvoření tabulek, přidání stránek Seznam Obrázků/Tabulek

--- a/text/latex_text/Solanska_DP.tex
+++ b/text/latex_text/Solanska_DP.tex
@@ -48,6 +48,8 @@
     %------------------------------------------------------------------------- ILUSTRACE
     \newpage
     \listoffigures
+    \newpage
+    \listoftables
 
     %------------------------------------------------------------------------- GLOSSARY
     \makeGlossary               
@@ -84,6 +86,7 @@
       \input{kapitoly/teorie/3_replikace.tex}
       \input{kapitoly/teorie/4_arcgis_produkty.tex}
       \input{kapitoly/teorie/5_pouzite_programove_prostredky.tex}
+      \input{kapitoly/teorie/6_nastroje_pro_replikaci.tex}
     
     %------------------------------------------------------------------------- VÝSLEDKY
     \newpage
@@ -131,11 +134,11 @@
 
         Adresáře a soubory:
 
-          - složka se skripty
+        - \texttt{skripty\slash} - složka se skripty
 
-          - web - webová stránky jako doplněk k diplomové práci
+        - \texttt{web\slash} - webové stránky jako doplněk k diplomové práci
 
-          - Solanska\_dp.pdf - text diplomové práce
+        - \texttt{Solanska\_DP.pdf} - text diplomové práce
 
       \vspace*{\fill}
   \end{prilohy}
