--- a/text/latex_text/kapitoly/cile.tex
+++ b/text/latex_text/kapitoly/cile.tex
@@ -1,21 +1,9 @@
+Cílem diplomové práce je provést rešerši v oblasti dostupných replikačních řešení a na jejím základě prakticky otestovat proces synchronizace a replikace geodat, které je možnost v kombinaci s ArcGIS produkty.
 
-      Cílem diplomové práce je provést rešerši a na jejím základě
-      prakticky otestovat proces synchronizace a replikace geodat, které
-      se dnes objevují napříč platformou \gls{Esri}. V teoretické části práce
-      bude detailně analyzován proces synchronizace a replikace ve všech
-      možných variantách (jednosměrná, dvousměrná, synchronní,
-      asynchronní, ...) a popsány prostředky, které se na platformě Esri k
-      těmto procesům využívají. Rozbor zahrne celé portfólio produktů od
-      desktop řešení, přes možnosti ArcGIS serveru až po cloudový ArcGIS
-      online. Budou popsány možnosti, požadavky a předpoklady pro úspěšnou
-      realizaci.
+V teoretické části práce budou podrobně definovány pojmy týkající se zálohování dat, především však synchronizace a replikace, dále deteilně rozebrána replikace ve všech možných variantách nastavení, tedy jednosměrná, dvousměrná, synchronní, asynchronní, kaskádová, logická a fyzická. Dále rozbor zahrne celé portfólio produktů od desktop řešení, přes možnosti ArcGIS serveru až po cloudový ArcGIS online.
 
-      V praktické části, nad existujícími katedrálními daty, dojde k
-      praktickému testování těchto procesů na předem připraveném
-      testovacím prostředí. Postupnými opakovanými procesy budou sledovány
-      dílčí parametry procesu (rychlost procesu, úplnost, chybovost,
-      podporované formáty). Vyjde se z primárně podporovaného databázového
-      stroje SQL Server, který bude konfrontován s možnosti dalšího
-      podporovaného systému PostgeSQL.
+V rešerší části budou diskutovány dva databázové server, SQL Server a PostgreSQL, oba podporované ArcGIS produkty a jejím základě pak vybrát jeden, na kterém pak proces replikace bude prakticky testován.
 
-      Můj jeden odstaveček - něco jako - jak vidím vlastní přínos do tématu. 
+Praktická část se bude zabývát návrhem replikačního řešení, které zahrne požadavky a možnosti katedry a bude brát v úvahu její způsoby využívání databáze. Na základě rešerše pak bude vybráno replikační řešení, připraveno testovací prostředí na základě všech výše zmíněných kritérií a na konec i praktickému testování výše zmíněných procesů.
+
+Postupnými opakovanými procesy budou sledovány dílčí parametry procesu (rychlost procesu, úplnost, chybovost, podporované formáty). 
