--- a/text/latex_text/kapitoly/uvod.tex
+++ b/text/latex_text/kapitoly/uvod.tex
@@ -1,54 +1,9 @@
+Dnešní trend je ukládat a ponechávat stále více dat pouze v digitální podobě. Mnoho dokumentů už se vůbec netiskne do papírové podoby, tím spíš pokud dnes existují elektronické podpisy, díky kterým je tištěná verze naprosto zbytečná. S přibývajícím počtem dat je však třeba řešit komplikace, které počítačová data přinášejí. Počítačoví experti řeší například otázky, kam ukládat tak velké množství dat, jak data efektivně aktualizovat, jak zabránit poškození dat ať už způsobených lidským faktorem či fyzickým poškozením hardware. V připadě, že se poškodí disk, můžeme často během okamžiku přijít o všechna data, někdy však pro ztrátu dat stačí pouze stisknout tlačítko na klávesnici. Určitě už se Vám nejednou stalo, že jste se nemohli přihlásit do svého účtu na internetu z důvodu přetížení serveru. I to je problém, který velké množství dat a velký počet uživatelů přináší. Jak tedy pracovat s těmito objemy, jak zabránit komplikacím, které mohou poškodit či zcela zničit celou dosavadní práci, a jak zrychlit celý proces práce s daty? 
 
-      Úvod je v rozsahu jedné strany. Je důležitou součástí práce. Uvádí
-      do problematiky řešené v bakalářské / magisterské práci. Student v
-      něm vyjadřuje potřebu řešení zadaného tématu, případně návaznost na
-      jeho předcházející práce. Doporučuje se, aby byl do své konečné
-      podoby dopsán až jako poslední, tj. až po napsání celého textu.
+Řešením velkého počtu výše uvedených problémů může být ukládaní dat do databáze a jejich následná replikace. Replikací je myšlena pokročilá funkce, která zajišťuje kopii dat na více serverů. Nabízí ji většina dnešních databázových serverů, zajišťuje větší robustnost databáze a vysokou dostupnost dat. Replikaci lze využít ve všech odvětvích, které pracují s daty. Výjimkou tedy není ani geoinformatika, která pracuje s velkými objemy dat, které navíc nesou informaci o geografické poloze. Právě reprezentace geografické polohy, skrze textový zápis souřadnice daných bodů, může způsobit razantní zvýšení velikosti dat. Například u webových dat se navím musí řešit častý přístup k databázi, protože každé posunutí výřezu či přiblížiní, resp. oddálení výřezu mapy, je samostatným dotazem, který musí kapacita serveru zvládat. Při představě, že si uživatel bude posouvat výřez mapy po 50m, může to způsobit velkou zátěž pro server. V tomto případě je potřeba řešit replikaci z důvodu rozložení zátěže. 
 
-      Dnešní trend je stále více dat ukládat a ponechávat pouze v
-      digitální podobě. Mnoho dokumentů už se vůbec netiskne do papírové
-      podoby. Tento trend dnes podporují i elektronické podpisy, díky
-      kterým je tištěná verze naprosto zbytečná. S přibývajícím počtem
-      dat je však třeba řešit komplikace, které počítačová data přináší.
-      Počítačoví experti řeší například kam ukládat tak velké množství
-      dat, jak data aktualizovat, jak zabránit poškození dat ať už
-      způsobených lidským faktorem či poškozením hardwaru. V připadě, že
-      se poškodí disk, můžeme často během okamžiku přijít o všechna
-      data, někdy však pro ztrátu dat stačí stikntou pouhé jedno
-      tlačítko na klávesnici. Určitě už se vám nejednou stalo, že jste
-      se nemohli přihlásit do svého účtu na internetu z důvodu přetížení
-      serveru. Jak zabránit těmto komplikacím, které mohou poškodit či
-      zcela zničit celou dosavadní práci nebo zrychlit celý proces práce
-      s tady? Řešením velkého počtu výše uvedených problémů je replikace
-      dat. Jedná se pokročilou funkci, kterou nabízí dnešní databázové
-      servery, zajišťující robustnost databáze a vysokou dostupnost dat
-      tím, že data zkopíruje na více serverů.
-      
-      Replikaci lze využít ve všech odvětvích, které pracují s daty.
-      Výjimkou tedy není ani geoiformatika, která pracuje s velkým
-      počtem dat, které navíc nesou informaci o geografické poloze. Z
-      mého pohledu data středně velkého nebo velkého projektu je
-      nejvhodnější ukládata do databáze. Nabízí nám to sofistikované
-      uložení dat, snadné propojení jednotlivých vrstev, snadnou
-      přenostitelnost dat a další. Replikace se dá využít pro kopii 
-      dat a následnou aktualizaci změn. Výhodou databáze je, že se při
-      změně jednoho prvku, aktualizuje v databázi pouze jeden řádek a
-      nekopíruje se znovu celá databáze, což je jednoznačná výhoda
-      oproti binárnímu uložení dat napřiklad ve formátu shapefile.
-      
-      Replikaci ocení určitě i uživatelé, které pracují na jednom
-      projektu. Z hlediska rychlosti práce s databází je výhodnější mít
-      databázi přimo na počítači, na kterém pracují, než data in-real
-      time stahovat ze serveru. Po dokončení editace se data replikují
-      prostřednictvím počítačové sítě nebo internetu. Dobrým příkladem
-      využitelnosti replikace je také nový trend využívání offline
-      mobilních aplikací v mobilních telefonech. Databáze se vždy
-      replikuje do mobilního telefonu, vždy když se klient připojít na
-      internetovou síť, aplikace kontroluje zda není na serveru novější
-      verze databáze a pokud je, zkopíruje pouze změny, které proběhly
-      od posledního stahování. (Jako příklad z geoinformatického
-      prostředí bych uvedla diplomovou práci Dalibora Janáka, který řeší
-      replikaci databáze lezeckých cest do mobilní aplikace.) Databázové
-      systémy nabízí širokou škálu nastavitelnosti, která umožňuje
-      přizpůsobit replikaci danému řešení. 
+Z mého pohledu data středně velkého až velkého projektu je vhodnější ukládata do databáze než jiných formátů typu shapefile, Microsoft Access nebo obyčejného tabulkového procesoru. Nabízí nám to sofistikované uložení dat, snadné propojení jednotlivých vrstev, snadnou přenostitelnost dat, možnost relačního propojení dat nebo efektivní vyhledávání. Replikace samotná se poté využívá pro kopii dat a následnou aktualizaci změn, která v databázi nastanou. 
 
+Replikaci ocení uživatelé pracující na společném projektu, distribuovaná pracoviště i společnosti s velkým množstvím důležitých dat, jejichž kopie je rozhodující pro jejich fungování. Dobrým příkladem využitelnosti replikace je také nový trend využívání offline aplikací v mobilních telefonech. Databáze se vždy replikuje do mobilního telefonu, kde může fungovat offline a vždy, když se klient připojit na internetovou síť, aplikace kontroluje zda není na serveru novější verze databáze a pokud je, zkopíruje pouze změny, které proběhly od posledního stahování. (Jako příklad z geoinformatického prostředí bych uvedla diplomovou práci Dalibora Janáka, který řeší replikaci databáze lezeckých cest do mobilní aplikace.) 
+
+Databázové systémy nabízí širokou škálu nastavitelnosti, která umožňuje přizpůsobit replikaci danému řešení.
