přidání kapitoly Implementace replikace, definice stylu pro ukázky kódů, přidání položky do bibliografie

--- a/text/latex_text/kapitoly/teorie/2_vymezeni_pojmu.tex
+++ b/text/latex_text/kapitoly/teorie/2_vymezeni_pojmu.tex
@@ -49,13 +49,13 @@
         Verzování může probíhat ručně, poloautomatizovaně či plně automatizovaně díky
         speciálním nástrojům pro správu verzí. Oblíbeným verzovací systémem
         programátorů je GIT\footnote{Více na http://git-scm.com/}, open-source nástroj
-        pro správu verzí, který pomáhá při práci s malými i velkými projekty a
+        pro správu verzí, který pomáhá při práci s~malými i velkými projekty a
         podporuje týmovou spolupráci. Umožňuje vrátit jednotlivé soubory nebo celý
-        projekt do předchozího stavu, porovnávat změny provedené v průběhu času,
+        projekt do předchozího stavu, porovnávat změny provedené v~průběhu času,
         zjistit, kdo naposledy upravil něco, co nyní možná způsobuje problémy, kdo
         vložil jakou verzi a mnoho dalšího \citep{Chacon2009}. GIT je vhodný zejména
         pro textové soubory, protože dokáže analyzovat části textu, či programového
-        kódu a zvýraznit části, které se změnily.
+        kódu a~zvýraznit části, které se změnily.
         
           \begin{figure}[H]
             \centering
@@ -80,7 +80,7 @@
         programový kód či data jsou plno funkční či aktuální, ale je potřeba je
         testovit či jinak měnit, pak je vhodné vytvořit tzn. pracovní verzi, aby
         nedošlo k poškození té správné. Pracovní verze je kopie aktuálního stavu, na
-        které je možno pracovat a zkoušet. V případě, že práce nedopadne podle přestav,
+        které je možno pracovat a zkoušet. V~případě, že práce nedopadne podle přestav,
         je možno změny zahodit, pokud je tomu naopak, je možno pracovní verzi sjednotit
         s platnou verzí. Tento způsob verzování umožňuje GIT i GeoGIT a takto chápe
         pojem verzování i společnosti Esri.
