--- a/text/latex_text/literatura.bib
+++ b/text/latex_text/literatura.bib
@@ -188,6 +188,15 @@
   url = {http://wiki.postgresql.org/wiki/FAQ}
 }
 
+@ARTICLE{pgpool2014,
+  author = {pgpool Global Development Group},
+  title = {What is pgpool-II?},
+  journal = {Pgpool Wiki},
+  year = {2013},
+  urldate = {2014-04-07}, 
+  url = {http://www.pgpool.net/docs/latest/pgpool-en.html}
+}
+
 @BOOK{Celikyilmaz2009,
   title = {Modeling uncertainty with fuzzy logic : with recent theory and applications},
   publisher = {Springer},
