--- a/text/latex_text/Solanska_DP.tex
+++ b/text/latex_text/Solanska_DP.tex
@@ -1,5 +1,6 @@
 \documentclass{thesisKGI}
-
+\newcommand{\itab}[1]{\hspace{0em}\rlap{#1}}
+\newcommand{\tab}[1]{\hspace{.2\textwidth}\rlap{#1}}
   %------------------- TITULNÍ STRANA ------------------- 
 
   \title{SYNCHRONIZACE A REPLIKACE GEODAT V PROSTŘEDÍ ESRI PLATFORMY}
@@ -32,11 +33,11 @@
     %poděkování, pokud nějaké chcete uvést, jinak lze tuto sekci smazat
     \begin{dedication}
 
-      Ráda bych poděkovala vedoucímu práce doc. RNDr. Vilému Pechancovi, Ph.D. za podněty a připomínky při vypracování práce.
+      Ráda bych poděkovala doc. RNDr. Vilému Pechancovi, Ph.D. za ochotné vedení této práce, pečlivé korekce a věcné připomínky.
 
-      Děkuji také konzultantu Tomáši Vondrovi za pomoc při pochopení a praktickém použití databázového serveru PostgreSQL, za jeho cenné rady a připomínky, stejně tak jako i jeho kolegovi Pavlovi Stěhule.
+      Děkuji také konzultantu Tomáši Vondrovi, za jeho cenné rady a odborný vhled, který vnesl do této práce, stejně tak jako i jeho kolegovi Pavlovi Stěhule.
 
-      Dále děkuji konzultantům Boudewijn van Leeuwen a Zalan Tobak působích na Universitě v Szegedu v Maďarsku za inspirativní připomínky a podněty k této práci. 
+      Dále děkuji konzultantům Boudewijn van Leeuwen a Zalan Tobak působích na Universitě v Szegedu v Maďarsku za inspirativní podněty při vypracování této práci. 
       \vspace{4em}
     \end{dedication}
 
@@ -90,7 +91,9 @@
     
     %------------------------------------------------------------------------- VÝSLEDKY
     \newpage
-    \section{VÝSLEDKY}
+    \section{NÁVRH A IMPLEMENTACE REPLIKACE}
+      \input{kapitoly/implementace/3_priprava_prostredi_pro_konfiguraci.tex}
+      \input{kapitoly/implementace/5_implementace_replikace.tex}
 
     %------------------------------------------------------------------------- DISKUZE
     \newpage
